welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:10: error: not found: value levebrosse
	levebrosse()
        ^